--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@
   color: var(--white);
   height: calc(var(--screenheight) * 0.115px);
   padding: calc(var(--screenheight) * 0.019px);
-  min-width: calc(var(--screenwidth) * 0.5px);
+  min-width: 50%;
   width: 100%;
 }
 .web-title {
@@ -51,8 +51,8 @@ body {
 .wrapper {
   vertical-align: middle;
   margin-top: calc(var(--screenheight) * 0.15px);
-  width: 100%;
-  height: 81vh;
+  width: calc(var(--screenwidth) * 1px);
+  height: calc(var(--screenheight) * 1px * 0.81);
   min-width: calc(var(--screenwidth) * 1px);
   min-height: calc(var(--screenheight) * 1px * 0.81);
 }
